--- a/RMG.Web/appsettings.json
+++ b/RMG.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9M7KVT4;Database=RMG;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=ALIRAZADT-PC;Database=RMG;Trusted_Connection=True;TrustServerCertificate=True",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=RMG.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
