--- a/RMG.DataAccess/RMG.DAL.csproj
+++ b/RMG.DataAccess/RMG.DAL.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
@@ -18,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RMG.Models\RMG.Models.csproj" />
+    <ProjectReference Include="..\RMG.Utility\RMG.Utility.csproj" />
   </ItemGroup>
 
 </Project>
